feat: NGX-41 added additional info label in the dropdown menu

--- a/projects/ngx-mentions/src/lib/text-input-autocomplete/text-input-autocomplete-menu/text-input-autocomplete-menu.html
+++ b/projects/ngx-mentions/src/lib/text-input-autocomplete/text-input-autocomplete-menu/text-input-autocomplete-menu.html
@@ -8,6 +8,11 @@
     <li *ngFor="let choice of choices; trackBy:trackById;"
         (click)="selectChoice.emit(choice)"
         class="ngx-selectable-list-item">
-        <span> {{getDisplayLabel(choice)}} </span>
+        <div>
+            <span> {{getDisplayLabel(choice)}} </span>
+        </div>
+        <div *ngIf="getDisplayLabelAdditionalInfo" class="additional-info">
+            <span> {{getDisplayLabelAdditionalInfo(choice)}} </span>
+        </div>
     </li>
 </ul>
